Tue Nov 25 14:47:18 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/CodeGenerationKit/CommandLine.hpp:

	  Added capability to iterate over options.

	* CCF/CCF/CompilerElements/FileSystem.hpp:

	  Added normalize() function to normalize absolute paths.

	* CCF/CCF/IDL2/Parser.cpp:
	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/SemanticAction/Factory.hpp:
	* CCF/CCF/IDL2/SemanticAction/Include.hpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Factory.hpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Include.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Factory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Include.hpp:	
	* CCF/Example/CIDL/LocalExecutorMapping/cidlc.cpp:
	
	  Added #include handling.
	
	* CCF/Test/IDL2/Parser/Include/root.idl:
	* CCF/Test/IDL2/Parser/Include/bar/bar.idl:
	* CCF/Test/IDL2/Parser/Include/bar/baz.idl:
	* CCF/Test/IDL2/Parser/Include/foo/foo.idl:

	  Simple test for #include.

Tue Nov 25 09:34:10 2003  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * performance-tests/Benchmark/RoundTrip/run_test.pl
          Changed the script to take the right svc.conf file

Mon Nov 24 19:24:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
	* examples/OEP/BasicSP/BMDevice/BMDevice_exec.cpp:
	* examples/handcrafted/BasicSP/BMClosedED/BMClosedED_exec.cpp:
	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.cpp:

	  Cosmetic fixes.

Mon Nov 24 16:37:12 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ciao/ComponentsC.h:

	  Removed unneeded inclusion of ComponentsC.i

Mon Nov 24 14:48:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/ComponentsS.h:

          Removed unneeded inclusion of ComponentsS_T.h.

Mon Nov 24 14:41:22 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/Assembly_Deployer/Assembly_Manager.cpp:
        * tools/Assembly_Deployer/Assembly_Visitors.cpp:
        * tools/Assembly_Deployer/Deployment_Configuration.cpp: